# AgenticContextBuilder

./: .acrignore  .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Award-after-Intent-to-Sole-Source-HF-Group-context.json  BACKLOG.md  CLAUDE.md  Dockerfile  LICENSE  OCR_SETUP.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  docker-entrypoint.sh  install_tesseract.md  pyproject.toml  pytest.ini  render.yaml  root-context.json  run-tests.bat  start-backend.bat  start-ui.bat  test-context.json  tree.md
.claude/: settings.json  settings.local.json
analysis/: claims_eda.ipynb  enrich_eval_v2.py
archive/: README.md
config/: content_config.json  default_config.json  enrichment_config.json  metadata_only_config.json  ocr_only_config.json  vision_only_config.json
context_builder/: __init__.py  __main__.py  acquisition.py  cli.py  cli_old.py  exceptions.py  ingest.py  output_writer.py  serialization.py  utils.py
docs/: ADJUSTER_QUESTIONS.md  ANALYSIS-coverage-matching-accuracy.md  ANALYSIS-repair-context-llm-validation.md  APIFY.md  ASSESSMENT_EVAL_REFERENCE.md  ASSESSMENT_IMPROVEMENTS_PLAN.md  ASSESSMENT_RERUN_PLAN.md  ASSUMPTIONS_JSON_FORMAT.md  BACKEND_MAINTAINABILITY_REVIEW.md  BACKEND_REFACTORING_PLAN.md  CLAIMS_FACT_SCREEN_RECOMMENDATIONS.md  CLAIM_65196_GAP_ANALYSIS.md  CLAIM_EXPLORER_REDESIGN_SPEC.md  CLAIM_LEVEL_RUNS_DESIGN.md  CLIENT-REPORT-MVP-Readiness-Feb2026.md  CODEBASE_ONBOARDING.md  DEEP-EVAL-report-eval53.md  EVAL-48-error-analysis.md  EVAL-pipeline-evaluation-guide.md  EVAL-process.md  EVALUATION_DASHBOARD_PLAN.md  EXTRACTION_IMPROVEMENTS_IMPLEMENTATION.md  EXTRACTION_IMPROVEMENTS_PLAN.md  FACT_AGGREGATION_PLAN.md  FIX-payout-single-source-of-truth.md  GT-errors-eval35.md  HANDOFF-evaluation-process.md  HANDOFF-known-issues.md  HANDOFF_ASSESSMENT_RERUN.md  HANDOFF_CLAIM_RUNS.md  HANDOFF_IMAGE_HIGHLIGHTING.md  HANDOFF_RECONCILIATION.md  HISTORY_TAB_FIX_PLAN.md  HOLDOUT-EVAL-report-v2.docx  HOLDOUT-EVAL-report-v2.md  IMPL-extraction-improvements.md  IMPLEMENTATION_GUIDELINES.md  NSA-BUSINESS-RULES-REVIEW.md  NSA-Claims-Data-Analysis-Report.docx  OCR_SETUP.md  (+33 more)
examples/: openai_vision_example.py  simple_openai_vision.py  simple_tesseract.py  tesseract_ocr_example.py
file_ingest/: __init__.py  __main__.py  cli.py  ingest.py  models.py  utils.py
intake/: cli.py  ingest.py  models.py  output_writer.py  serialization.py
phases/: phase-0-baseline-inventory.md  phase-1-api-service-layer.md  phase-1-shared-run-state.md  phase-2-run-selector.md  phase-3-layout-standardization.md  phase-4-title-duplication.md  phase-5-rename-screen.md  phase-6-classification-pdf-viewer.md  phase-7-document-review-screen.md  phase-8-sidebar-navigation.md  phase1-image-viewer.md  phase2-upload-infrastructure.md  phase3-pipeline-service.md  phase4-frontend-types-api.md  phase5-frontend-components.md  phase6-integration.md
plans/: 20260114-Label-Architecture-Fix.md  assumptions-current.txt  (+32 more)
(+1011 files in other folders)
