[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-builder"
version = "0.1.0"
description = "Context Manager for processing claims documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "pypdfium2>=4.30.0",
    "rich>=14.1.0",
    "colorlog>=6.9.0",
    "python-frontmatter>=1.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "azure-ai-documentintelligence>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
where = ["src"]
