[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-builder"
version = "0.3.0"
description = "Insurance policy processing pipeline and claims runtime (context_builder + policy_compiler)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",  # Note: [standard] removed - watchfiles causes reload hangs on Windows
    "websockets>=10.0",  # Required for WebSocket support (previously included in uvicorn[standard])
    "python-multipart>=0.0.6",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
    "pypdfium2>=4.30.0",
    "rich>=14.1.0",
    "colorlog>=6.9.0",
    "python-frontmatter>=1.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "azure-ai-documentintelligence>=1.0.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.67.1",
    "streamlit>=1.50.0",
    "json-logic>=0.6.3",
    "pycryptodome>=3.20.0",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.messages_control]
disable = ["wrong-import-position"]
